# num-methods

./: LICENSE  README.md
gauss_ldlt/: .gitignore  CMakeLists.txt  README.md  collect_stats.py  create_matrix.py  input.txt  input2.txt  input3.txt  main.cpp  matrix.h  report.md
gauss_ldlt_bad/: .clangd  README.md  collect_stats.py  matrix.h
